[gd_scene load_steps=14 format=3 uid="uid://byghhep3wnbs0"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_yjdx7"]
[ext_resource type="Texture2D" uid="uid://j33rmysg5k3" path="res://sprites/Boss.png" id="2_v8yl0"]
[ext_resource type="PackedScene" uid="uid://6o5ft161qga8" path="res://scences/slam.tscn" id="3_3p307"]
[ext_resource type="PackedScene" uid="uid://7f5ustq5kl83" path="res://scences/slam_left.tscn" id="4_mbodd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wu1up"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v8yl0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c31ia"]
radius = 7.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qv3d"]
radius = 6.0
height = 82.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ohlq"]
radius = 7.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xor7r"]
size = Vector2(20, 57)

[sub_resource type="CircleShape2D" id="CircleShape2D_lk5mo"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5rmh"]
size = Vector2(27.5, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y6n8f"]
size = Vector2(87, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_bc5vo"]
radius = 8.0

[node name="BOSS" type="CharacterBody2D" node_paths=PackedStringArray("boss") groups=["Boss"]]
script = ExtResource("1_yjdx7")
boss = NodePath(".")
boss_x_spd = 40

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_wu1up")

[node name="Hitboxes" type="Node" parent="AnimatedSprite2D"]

[node name="HozintalAttack" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
position = Vector2(0, -15)
collision_layer = 8
collision_mask = 8

[node name="h_attack_collision" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/HozintalAttack"]
position = Vector2(55, 7.5)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_c31ia")
disabled = true
debug_color = Color(1, 0.00784314, 0.0470588, 0.145098)

[node name="VericalAttack" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="V_Attack_collision" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/VericalAttack"]
position = Vector2(-1, -62)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_1qv3d")
disabled = true
debug_color = Color(1, 0.00784314, 0.0470588, 0.145098)

[node name="hDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="h_can_attack" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/hDetect"]
position = Vector2(29, -7)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_4ohlq")

[node name="vDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="v_can_attack" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/vDetect"]
position = Vector2(-1, -51.5)
shape = SubResource("RectangleShape2D_xor7r")

[node name="bossCollisionArea" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 136
collision_mask = 136

[node name="bossCollision" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/bossCollisionArea"]
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_lk5mo")
debug_color = Color(1, 0.00784314, 0.0470588, 0.145098)

[node name="chargeDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="charge_can_attack" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/chargeDetect"]
position = Vector2(300, -29)
shape = SubResource("RectangleShape2D_h5rmh")

[node name="Slam" parent="AnimatedSprite2D/Hitboxes" instance=ExtResource("3_3p307")]
position = Vector2(-1, 0)
collision_layer = 136
collision_mask = 136

[node name="SlamLeft" parent="AnimatedSprite2D/Hitboxes" instance=ExtResource("4_mbodd")]
position = Vector2(-114, 0)
collision_layer = 129
collision_mask = 129

[node name="slamDetect" type="Area2D" parent="AnimatedSprite2D/Hitboxes"]
collision_layer = 8
collision_mask = 8

[node name="slam_can_attack" type="CollisionShape2D" parent="AnimatedSprite2D/Hitboxes/slamDetect"]
position = Vector2(215, -4)
shape = SubResource("RectangleShape2D_y6n8f")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_bc5vo")
debug_color = Color(0.439216, 0.580392, 0.419608, 0.741176)

[node name="AttackCooldown" type="Timer" parent="."]

[node name="slamcooldown" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/hDetect" to="." method="_on_h_detect_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/vDetect" to="." method="_on_v_detect_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/bossCollisionArea" to="." method="_on_boss_collision_area_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/chargeDetect" to="." method="_on_charge_detect_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/Hitboxes/slamDetect" to="." method="_on_slam_detect_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="slamcooldown" to="." method="_on_slamcooldown_timeout"]
